Cleanups and rewording